# rvc2hass

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
profiles/: thor_hurricane_35m.yaml
rvc2hass/: __init__.py  __main__.py  app.py  can_bus.py  config.py  discovery.py  entity_manager.py  mqtt_client.py  rvc_decoder.py
rvc2hass/entities/: __init__.py  cover.py  light.py  switch.py
specs/: rvc_spec.yaml
systemd/: can0-up.service  rvc2hass.service
tests/: conftest.py  test_commands.py  test_config.py  test_decoder.py  test_discovery.py  test_mqtt.py  test_profile.py  test_spec.py
