[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rvc2hass"
version = "0.1.0"
description = "RV-C CAN bus to Home Assistant via MQTT auto-discovery"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.7"
dependencies = [
    "python-can>=4.0",
    "paho-mqtt>=2.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
rvc2hass = "rvc2hass.__main__:main"

[tool.setuptools.packages.find]
include = ["rvc2hass*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
